add comprehensive unit tests